WMG112519/force-app/main/default/objects/Contact_Keyword__c/Contact_Keyword__c.object-meta.xml
<CustomObject>
    <label>Contact Keyword</label>
    <nameField>
        <displayFormat>CK-{00000000}</displayFormat>
        <label>Contact Keyword</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Keywords</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>