WMG112519/force-app/main/default/objects/Contact_Keyword__c/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <label>Keyword</label>
    <referenceTo>Keyword__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contact_Keywords</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>