WMG112519/force-app/main/default/objects/Contact_Keyword__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Updated by Workflow, show the value regardless of the type.  Too big to put in a formula.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>