WMG112519/force-app/main/default/objects/Contact_Keyword__c/fields/Value_Currency__c.field-meta.xml
<CustomField>
    <fullName>Value_Currency__c</fullName>
    <label>Value (Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>