WMG112519/force-app/main/default/objects/Contact_Keyword__c/fields/Value_Currency_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Value_Currency_Formatted__c</fullName>
    <formula>IF(NOT(ISBLANK(Value_Currency__c)),&#39;$&#39;,&#39;&#39;) &amp; 
CASE(LEN(TEXT(Value_Currency__c)),
1, TEXT(Value_Currency__c),
2, TEXT(Value_Currency__c),
3, TEXT(Value_Currency__c),
4, LEFT(TEXT(Value_Currency__c), 1) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Value_Currency__c), 3),
5, LEFT(TEXT(Value_Currency__c), 2) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Value_Currency__c), 3),
6, LEFT(TEXT(Value_Currency__c), 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Value_Currency__c), 3),
7, LEFT(TEXT(Value_Currency__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(Value_Currency__c), 2,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Value_Currency__c), 3),
8, LEFT(TEXT(Value_Currency__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(Value_Currency__c), 3,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Value_Currency__c), 3),
9, LEFT(TEXT(Value_Currency__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(Value_Currency__c), 4,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Value_Currency__c), 3),
10, LEFT(TEXT(Value_Currency__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(Value_Currency__c), 2,3) &amp; &quot;,&quot; &amp; MID(TEXT(Value_Currency__c), 5, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Value_Currency__c), 3),
11, LEFT(TEXT(Value_Currency__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(Value_Currency__c), 3,3) &amp; &quot;,&quot; &amp; MID(TEXT(Value_Currency__c), 6, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Value_Currency__c), 3),
12, LEFT(TEXT(Value_Currency__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(Value_Currency__c), 4,3) &amp; &quot;,&quot; &amp; MID(TEXT(Value_Currency__c), 7, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Value_Currency__c), 3),
null)</formula>
    <label>Value_Currency_Formatted</label>
    <type>Text</type>
</CustomField>