WMG112519/force-app/main/default/objects/Contact_Keyword__c/fields/Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Value_Number__c</fullName>
    <label>Value (Number)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>