WMG112519/force-app/main/default/objects/Contact_Keyword__c/fields/Value_OLD__c.field-meta.xml
<CustomField>
    <fullName>Value_OLD__c</fullName>
    <formula>Value_Text__c &amp; TEXT( Value_Date__c )&amp; TEXT(Value_Number__c) &amp; TEXT( Value_Currency__c )</formula>
    <inlineHelpText>Shows a text representation of the value entered (across all types) - there may be some slight differences in format compared to the actual value.</inlineHelpText>
    <label>Value_OLD</label>
    <type>Text</type>
</CustomField>