WMG112519/force-app/main/default/objects/Contact_Keyword__c/fields/Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Value_Text__c</fullName>
    <label>Value (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>