WMG112519/force-app/main/default/objects/Contact_Keyword__c/recordTypes/Currency.recordType-meta.xml
<RecordType>
    <fullName>Currency</fullName>
    <active>true</active>
    <description>Store keywords with a currency value (e.g. Net Worth = $10,000,000)</description>
    <label>Currency</label>
</RecordType>