WMG112519/force-app/main/default/objects/Contact_Keyword__c/recordTypes/Date.recordType-meta.xml
<RecordType>
    <fullName>Date</fullName>
    <active>true</active>
    <description>Store keywords with a date value (e.g. Dog&#39;s Birthday = 8/4/2010)</description>
    <label>Date</label>
</RecordType>