WMG112519/force-app/main/default/objects/Contact_Keyword__c/recordTypes/Number.recordType-meta.xml
<RecordType>
    <fullName>Number</fullName>
    <active>true</active>
    <description>Store keywords with a numeric value, but not a currency (e.g. Favorite Number = 42)</description>
    <label>Number</label>
</RecordType>