WMG112519/force-app/main/default/objects/Contact_Keyword__c/recordTypes/Text.recordType-meta.xml
<RecordType>
    <fullName>Text</fullName>
    <active>true</active>
    <description>Store keywords with a text value (e.g. Hobbies = Golf) or no associated value (e.g. Receives Newsletter)</description>
    <label>Text</label>
</RecordType>